# UHAILab

./: README.md  memo.md  pyproject.toml  user_defined.csv  ver1_Programming_vocabulary.csv
.github/workflows/: lapras-card.yml
Data/: correctly_general.txt  correctly_noise.txt  correctly_slang.txt  correctly_technical.txt  generated_.txt  generated_10.txt  generated_100.txt  generated_1000.txt  text_general.txt  text_noise.txt  text_slang.txt  text_technical.txt  txt_generator.py
Documentation/: Instruction.html  implementation.md  specification.md  testingdocument.md  userguide.md  week1report.md  week2report.md  week3report.md  week4report.md  week5report.md  week6report.md
GRASP/: .coverage  __main__.py  config.py  core.py  core.rs  libdistance_lib.dylib  libunrestricted.dylib  ui.py  unrestricted_damerau_levenshtein.c  unrestricted_damerau_levenshtein.rs
GRASP/distance_lib/: Cargo.toml
GRASP/distance_lib/src/: lib.rs
Tests/: .coverage  test_core.py  test_prime.py  test_user_corrections.csv
