[project]
name = "grasp"
version = "0.1.0"
description = "This is the project to improve bthe quality of programming education so that those beginners do not give up learning it."
authors = [
    {name = "Yuki Yotsumoto",email = "yuki.yotsumoto@helsinki.fi"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.10"
customtkinter = "^5.2.2"